full/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: full-example
  labels:
    name: full-example
