full/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devops-deployment
  namespace: full-example
spec:
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
        - name: app
          image: jeanpsv/devops-days-bh-kubernetes-introduction:v1
          imagePullPolicy: IfNotPresent
          command: ["npm", "start"]
          ports:
            - name: http # named port
              containerPort: 4000
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 300Mi
            limits:
              cpu: 1000m
              memory: 600Mi
          volumeMounts:
            - name: configurations
              mountPath: /app/extra.json
      volumes:
        - name: configurations
          configMap:
            name: my-configs
